--- a/styless/portfolio.css
+++ b/styless/portfolio.css
@@ -95,25 +95,127 @@ nav li a{
     color: #757575;
 }
 .bg-color{
-    background-color: #FFF8F3; 
+     background-color: #FFF8F3; 
    
 }
-.about{
-     border-radius: 10px;
-  padding: 130px 150px;
-  text-align: center;
-  margin-top: 130px;
+ .about{ 
+      border-radius: 10px; 
+  padding: 130px 150px; 
+  text-align: center; 
+  
 
 }
-main{
+  main{  
      max-width: 1140px;
-     margin: 0 auto; 
+      margin: 0 auto;   
 }
-.about-items{
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+.about-items{ 
    display: flex; 
-    justify-content: space-around; 
+     justify-content: space-around;
 
 }
 .item-description{
     font-weight: 600; 
+}
+.white-color{
+    background-color: white;
+} 
+/* skill matter */
+.skill-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+    text-align: center;
+}
+.skill-description{
+    font-size: 18px;
+    color: #757575;
+    margin-top: 23px;
+    width: 909px;
+    justify-content: center;
+    margin-bottom: 130px;
+}
+.skill{
+    margin-top: 80px;
+  
+     /* margin: 0 315px 0 376px; */
+}
+
+/* skills contain style */
+.skills-container{
+
+    display: flex;
+    gap: 24px;
+
+}
+.skills{
+    padding: 30px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+
+}
+/* resume container style */
+.resume-container{
+    display: flex;
+    gap: 24px;
+}
+.experience-description{
+    color: #757575;
+}
+.experience-subtitle{
+    font-size: 20px;
+    color: #757575;
+    font-weight: 600;
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+.experience-title{
+    font-size: 25px;
+    font-weight: bold;
+    color: #474747;
+    
+}
+.resume-column-title{
+    font-size: 30px;
+    font-weight: bold;
+    color: #474747;
+}
+.head-er{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+    text-align: center;
+    margin-bottom: 113px;
+}
+/* Button  */
+.text-center{
+    text-align: center;
+    margin-top: 50px;
+}
+.footer-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+footer{
+    padding: 130px 230px;
+    display: flex;
+    gap: 110px;
+}
+.footer-column{
+    width: 50%;
+}
+footer input[type="text"], footer input[type="email"], footer textarea{
+    height: 64px;
+    border-radius: 5px;
+    background-color: white;
+    display: block;
+    width: 100%;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+    border: none;
 }
